/*
 * Copyright 2015-2017 Hayai Software
 * Copyright 2018-2022 The KeikaiLauncher Project
 * Copyright 2024 uaapps
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
 * in compliance with the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the
 * License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND
 * either express or implied. See the License for the specific language governing permissions and
 * limitations under the License.
 */
import org.eclipse.jgit.api.Git
import org.eclipse.jgit.revwalk.RevWalk
import org.eclipse.jgit.storage.file.FileRepositoryBuilder

plugins {
    id 'com.android.application'
}

android {
    compileSdk 34

    defaultConfig {
        applicationId 'xyz.uaapps.launcher'
        minSdkVersion 1
        targetSdkVersion 34
        versionCode gitCommitsCount(rootDir)
        versionName gitDescribe(rootDir)
    }

    applicationVariants.configureEach { variant ->
        variant.outputs.configureEach {
            var variantName = variant.name == 'debug' ? '-debug' : ''
            var flavorName = project.gradle.startParameter.taskNames.any { it.contains("Lite") } ? '-lite' : ''
            outputFileName = "${rootProject.name.toLowerCase()}${flavorName}-${variant.versionName}${variantName}.apk"
        }
    }

    buildTypes {
        release {
            signingConfig signingConfigs.debug
            debuggable false
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    buildFeatures {
        buildConfig true
    }

    namespace 'xyz.uaapps.launcher'

    flavorDimensions "version"
    productFlavors {
        full {
            dimension "version"
        }
        lite {
            dimension "version"
        }
    }
}

dependencies {
    implementation 'androidx.annotation:annotation:1.7.1'
    testImplementation 'junit:junit:4.13.2'
}

static def gitCommitsCount(rootDir) {
    try (
        var repository = new FileRepositoryBuilder().setWorkTree(rootDir).build();
        var revWalk = new RevWalk(repository)
    ) {
        var headCommit = revWalk.parseCommit(repository.resolve("HEAD"))
        revWalk.markStart(headCommit)

        var commitCount = 0
        revWalk.each { commitCount++ }

        return commitCount
    }
}

static def gitDescribe(rootDir) {
    try (
        var repository = new FileRepositoryBuilder().setWorkTree(rootDir).build();
        var git = new Git(repository)
    ) {
        return git.describe().call()
    }
}
